--- a/app/views/admin/runners/show.html.haml
+++ b/app/views/admin/runners/show.html.haml
@@ -25,7 +25,7 @@
             .pull-right
               = link_to 'Disable', [:admin, project, runner_project], method: :delete, class: 'btn btn-danger btn-xs'
 
-      - (Project.all - @runner.projects).each do |project|
+      - Project.supported_runners.each do |project|
         %li
           %h5
             = project.name
